Update file name

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                       <a href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
                       <ul class="dropdown-menu">
                           <li><a href="about.html">Về chúng tôi</a></li>
-                          <li><a href="faq.html">Hồ sơ năng lực</a></li>
+                          <li><a href="hosonangluc.html">Hồ sơ năng lực</a></li>
                           <li><a href="tamnhinvasumenh.html">Tầm nhìn và sứ mệnh</a></li>
                       </ul>
                     </li>
