--- a/index.html
+++ b/index.html
@@ -91,11 +91,16 @@
                                     <nav>
                                         <ul class="nav topnav">
                                             <li class="dropdown active">
-                                                <a href="index.html"><i class="icon-home"></i> Trang chủ <i class="icon-angle-down"></i></a>
+                                                <a href="index.html">
+                                                    <i class="icon-home"></i> Trang chủ 
+                                                    <i class="icon-angle-down"></i>
+                                                </a>
                                             </li>
                                             <li class="dropdown">
-                                                <a href="#"> Dịch vụ PCCC
-                                                    <i class="icon-angle-down"></i></a>
+                                                <a href="#"> 
+                                                    Dịch vụ PCCC
+                                                    <i class="icon-angle-down"></i>
+                                                </a>
                                                 <!-- <ul class="dropdown-menu">
                                                                                   <li><a href="typography.html">Typography</a></li>
                                                                                   <li><a href="components.html">Components</a></li>
@@ -110,10 +115,10 @@
                                                                                 </ul> -->
                                             </li>
                                             <li class="dropdown">
-                                                <a href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
+                                                <a  href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
                                                 <ul class="dropdown-menu">
                                                     <li><a href="about.html">Về chúng tôi</a></li>
-                                                    <li><a href="faq.html">Hồ sơ năng lực</a></li>
+                                                    <li><a href="hosonangluc.html">Hồ sơ năng lực</a></li>
                                                     <li><a href="tamnhinvasumenh.html">Tầm nhìn và sứ mệnh</a></li>
                                                 </ul>
                                             </li>
