--- a/tamnhinvasumenh.html
+++ b/tamnhinvasumenh.html
@@ -41,109 +41,134 @@
     <div id="wrapper">
 
         <!-- start header -->
-        <header>
-            <div class="top">
-                <div class="container">
-                    <div class="row">
-                        <div class="span6">
-                            <p class="topcontact" style="font-size: 20px;padding-top:5px"><i class="icon-phone"></i> +84
-                                978 738 538 </p>
-                        </div>
-                        <div class="span6">
-
-                            <ul class="social-network" style="font-size: 20px;">
-                                <li><a href="https://www.facebook.com/CongtyPCCCPhuThuongPhat/" data-placement="bottom"
-                                        title="Facebook"><i class="icon-facebook icon-white"></i></a></li>
-                                <li><a href="#" data-placement="bottom" title="Twitter"><i
-                                            class="icon-twitter icon-white"></i></a></li>
-                                <li><a href="#" data-placement="bottom" title="Linkedin"><i
-                                            class="icon-linkedin icon-white"></i></a></li>
-                                <li><a href="#" data-placement="bottom" title="Pinterest"><i
-                                            class="icon-pinterest  icon-white"></i></a></li>
-                                <li><a href="#" data-placement="bottom" title="Google +"><i
-                                            class="icon-google-plus icon-white"></i></a></li>
-                                <li><a href="#" data-placement="bottom" title="Dribbble"><i
-                                            class="icon-dribbble icon-white"></i></a></li>
-                            </ul>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container">
-                <div class="row nomargin">
-                    <div class="span4">
-                        <div class="logo">
-                            <a href="index.html"><img src="img/logoPhuthuongphat.png" alt="" style="width: 65%" /></a>
-                        </div>
-                    </div>
-                    <div class="span8" style="padding-top: 2%">
-                        <div class="navbar navbar-static-top">
-                            <div class="navigation">
-                                <nav>
-                                    <ul class="nav topnav">
-                                        <li class="dropdown">
-                                            <a href="index.html"><i class="icon-home"></i> Trang chủ <i
-                                                    class="icon-angle-down"></i></a>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#"> Dịch vụ PCCC
-                                                <i class="icon-angle-down"></i></a>
-                                            <!-- <ul class="dropdown-menu">
-                                                              <li><a href="typography.html">Typography</a></li>
-                                                              <li><a href="components.html">Components</a></li>
-                                                              <li><a href="icons.html">Icons</a></li>
-                                                              <li><a href="icon-variations.html">Icon variations</a></li>
-                                                              <li class="dropdown"><a href="#">3rd menus<i class="icon-angle-right"></i></a>
-                                                                <ul class="dropdown-menu sub-menu-level1">
-                                                                  <li><a href="index.html">Sub menu</a></li>
-                                                                  <li><a href="index.html">Sub menu</a></li>
-                                                                </ul>
-                                                              </li>
-                                                            </ul> -->
-                                        </li>
-                                        <li class="dropdown active">
-                                            <a href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="about.html">Về chúng tôi</a></li>
-                                                <li><a href="faq.html">Hồ sơ năng lực</a></li>
-                                                <li><a href="tamnhinvasumenh.html">Tầm nhìn và sứ mệnh</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#"> Công trình <i class="icon-angle-down"></i></a>
-                                            <!-- <ul class="dropdown-menu">
-                                            <li><a href="portfolio-2cols.html">Công trình</a></li>
-                                            <li><a href="portfolio-3cols.html">Khách hàng</a></li>
-                                            <li><a href="portfolio-4cols.html">Portfolio 4 columns</a></li>
-                                            <li><a href="portfolio-detail.html">Portfolio detail</a></li>
-                                        </ul> -->
-
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#"> Khách hàng <i class="icon-angle-down"></i></a>
-                                            <!-- <ul class="dropdown-menu">
-                                                <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                                                <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
-                                                <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                                                <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
-                                                <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
-                                            </ul> -->
-                                        </li>
-                                        <li>
-                                            <a href="contact.html"> Liên hệ </a>
-                                        </li>
-                                    </ul>
-                                </nav>
+        <header style="padding: 0px">
+                <div class="top" style="margin: 0">
+                    <div class="container-fluid">
+                        <div class="row" style="margin:0 auto">
+                            <div class="span3">
+                                <p class="topcontact" style="font-size: 20px;padding-top: 10px">
+                                    <i class="icon-phone"></i> +84 978 738 538
+                                </p>
                             </div>
-                            <!-- end navigation -->
+                            <div class="span7 marquee-hide">
+                                <marquee direction="right" style="color: rgb(63, 80, 238); font-weight: bold; font-size: 25px;padding: 8px 0 8px 0">
+                                    CÔNG TY TNHH THƯƠNG MẠI VÀ KỸ THUẬT PCCC PHÚ THƯỢNG PHÁT
+                                </marquee>
+                            </div>
+                            <div class="span3">
+                                <ul class="social-network" style="font-size: 20px;padding-top: 5px">
+                                    <li>
+                                        <a href="https://www.facebook.com/CongtyPCCCPhuThuongPhat/" data-placement="bottom" title="Facebook">
+                                            <i class="icon-facebook icon-white"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" data-placement="bottom" title="Twitter">
+                                            <i class="icon-twitter icon-white"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" data-placement="bottom" title="Linkedin">
+                                            <i class="icon-linkedin icon-white"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" data-placement="bottom" title="Pinterest">
+                                            <i class="icon-pinterest  icon-white"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" data-placement="bottom" title="Google +">
+                                            <i class="icon-google-plus icon-white"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" data-placement="bottom" title="Dribbble">
+                                            <i class="icon-dribbble icon-white"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </header>
-        <!-- end header -->
+    
+                <div class="container">
+                    <div class="row nomargin">
+                        <div class="span4">
+                            <div class="logo">
+                                <a href="index.html">
+                                    <img src="img/logoPhuthuongphat.png" alt="" style="width: 80%; margin: 10px 0 10px 0" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="span8">
+                            <div style="padding-top: 41px">
+                                <div class="navbar navbar-static-top">
+                                    <div class="navigation">
+                                        <nav>
+                                            <ul class="nav topnav">
+                                                <li class="dropdown">
+                                                    <a href="index.html"><i class="icon-home"></i> Trang chủ <i class="icon-angle-down"></i></a>
+                                                </li>
+                                                <li class="dropdown">
+                                                    <a href="#"> Dịch vụ PCCC
+                                                        <i class="icon-angle-down"></i></a>
+                                                    <!-- <ul class="dropdown-menu">
+                                                                                      <li><a href="typography.html">Typography</a></li>
+                                                                                      <li><a href="components.html">Components</a></li>
+                                                                                      <li><a href="icons.html">Icons</a></li>
+                                                                                      <li><a href="icon-variations.html">Icon variations</a></li>
+                                                                                      <li class="dropdown"><a href="#">3rd menus<i class="icon-angle-right"></i></a>
+                                                                                        <ul class="dropdown-menu sub-menu-level1">
+                                                                                          <li><a href="index.html">Sub menu</a></li>
+                                                                                          <li><a href="index.html">Sub menu</a></li>
+                                                                                        </ul>
+                                                                                      </li>
+                                                                                    </ul> -->
+                                                </li>
+                                                <li class="dropdown active">
+                                                    <a href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
+                                                    <ul class="dropdown-menu">
+                                                        <li><a href="about.html">Về chúng tôi</a></li>
+                                                        <li><a href="hosonangluc.html">Hồ sơ năng lực</a></li>
+                                                        <li><a href="tamnhinvasumenh.html">Tầm nhìn và sứ mệnh</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="dropdown">
+                                                    <a href="#"> Công trình <i class="icon-angle-down"></i></a>
+                                                    <!-- <ul class="dropdown-menu">
+                                                                    <li><a href="portfolio-2cols.html">Công trình</a></li>
+                                                                    <li><a href="portfolio-3cols.html">Khách hàng</a></li>
+                                                                    <li><a href="portfolio-4cols.html">Portfolio 4 columns</a></li>
+                                                                    <li><a href="portfolio-detail.html">Portfolio detail</a></li>
+                                                                </ul> -->
+                        
+                                                </li>
+                                                <li class="dropdown">
+                                                    <a href="#"> Khách hàng <i class="icon-angle-down"></i></a>
+                                                    <!-- <ul class="dropdown-menu">
+                                                                        <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
+                                                                        <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
+                                                                        <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
+                                                                        <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
+                                                                        <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
+                                                                    </ul> -->
+                                                </li>
+                                                <li>
+                                                    <a href="contact.html"> Liên hệ </a>
+                                                </li>
+                                            </ul>
+                                        </nav>
+                                    </div>
+                                    <!-- end navigation -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <!-- end header -->
 
         <section id="inner-headline">
             <div class="container">
