--- a/team.html
+++ b/team.html
@@ -106,7 +106,7 @@
                       <a href="#">Pages <i class="icon-angle-down"></i></a>
                       <ul class="dropdown-menu">
                         <li><a href="about.html">About us</a></li>
-                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="hosonangluc.html">FAQ</a></li>
                         <li><a href="team.html">Team</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="pricingbox.html">Pricing boxes</a></li>
