--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
                   <li><label>Địa chỉ :</label> Dĩ An, Bình Dương </li>
                   <li><label>Điện thoại :</label>0978 738 538 / 0987 474 114</li>
                   <li><label>Mã số thuế :</label>3 7 0 2 6 3 5 0 4 5</li>
-                  <li><label>Email : </label> iphuthuongphatpccc@gmail.com</li>
+                  <li><label>Email : </label> phuthuongphatpccc@gmail.com</li>
                 </ul>
 
               </div>
