--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <!-- start header -->
         <header style="padding: 0px">
             <div class="top" style="margin: 0">
-                <div class="container-fluid">
+                <div class="container-fluid" style="margin:0 auto">
                     <div class="row" style="margin:0 auto">
                         <div class="span3">
                             <p class="topcontact" style="font-size: 20px;padding-top: 10px">
                                 <i class="icon-phone"></i> +84 978 738 538
                             </p>
                         </div>
-                        <div class="span7 marquee-hide">
+                        <div class="span6 marquee-hide">
                             <marquee direction="right" style="color: rgb(63, 80, 238); font-weight: bold; font-size: 25px;padding: 8px 0 8px 0">
                                 CÔNG TY TNHH THƯƠNG MẠI VÀ KỸ THUẬT PCCC PHÚ THƯỢNG PHÁT
                             </marquee>
@@ -69,7 +69,6 @@
                                 <li><a href="#" data-placement="bottom" title="Dribbble"><i
                                             class="icon-dribbble icon-white"></i></a></li>
                             </ul>
-
                         </div>
                     </div>
                 </div>
