--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
                         <h6>
                             Ngay từ ngày đầu thành lập Công Ty chúng tôi đã xây dựng được một đội
                             ngũ nhân viên trẻ, chuyên nghiệp, năng động, nhiệt tình có chuyên môn
-                            kỷ thuật cao và trách nhiệm trong công việc.
+                            kỹ thuật cao và trách nhiệm trong công việc.
                         </h6>
                         <h6>
                             Đội ngũ kinh doanh và các nhân viên tư vấn sẽ
